Improve tests for MisspellingSimpleFinder and MisspellingComposedFinder